[gd_scene load_steps=16 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://MainScene.gd" type="Script" id=2]
[ext_resource path="res://triggers/TriggerBlue.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/PlayerRed.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/map_full.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://triggers/TriggerGreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://triggers/TriggerPurple.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/BlueBot.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/GreenBot.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/PurpleBot.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/collab_sign.png" type="Texture" id=12]
[ext_resource path="res://Sprites/cheating_sign.png" type="Texture" id=13]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 188.627, -142.703 )
b = Vector2( -60.0622, 106.269 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -60.4158, -142.986 )
b = Vector2( 188.839, 106.905 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="MapSceneControls" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollabIcon" type="TextureRect" parent="CanvasLayer/MapSceneControls"]
visible = false
margin_left = 708.0
margin_top = 372.0
margin_right = 808.0
margin_bottom = 472.0
rect_scale = Vector2( -1, -1 )
rect_pivot_offset = Vector2( -15, -15 )
texture = ExtResource( 12 )
expand = true
flip_h = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BetrayIcon" type="TextureRect" parent="CanvasLayer/MapSceneControls"]
visible = false
margin_left = 738.0
margin_top = 402.0
margin_right = 838.0
margin_bottom = 502.0
rect_scale = Vector2( -1, -1 )
rect_pivot_offset = Vector2( -15, -15 )
texture = ExtResource( 13 )
expand = true
flip_h = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VotingTimer" type="Timer" parent="."]

[node name="ScoreWindowimer" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 318.07, 250.469 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
show_behind_parent = true
position = Vector2( 64.7003, -37.8302 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -60.5668, 107.336 )
polygon = PoolVector2Array( 247.426, -0.784515, 297.277, -125.235, 246.366, -247.918, 124.672, -297.204, 2.48442, -248.06, -48.0737, -126.791, 2.13087, -1.20869, 124.814, 47.5817, 282.074, -15.6338, 148.785, 87.1089, -29.4061, 15.1962, -88.3788, -170.985, -8.82932, -315.942, 124.39, -350.307, 259.235, -298.689, 315.096, -157.196, 275.357, -20.23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 490.149, 224.631 )
collision_layer = 2
collision_mask = 5

[node name="TriggerPurple" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 423.192, 230.562 )

[node name="TriggerGreen" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 442.205, 197.208 )

[node name="TriggerBlue" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 446.848, 270.013 )

[node name="GreenBot" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 382.232, 117.483 )

[node name="BlueBot" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 274.554, 225.807 )

[node name="PurpleBot" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 382.095, 334.155 )

[node name="BlueSpawn" type="Sprite" parent="."]
visible = false
position = Vector2( 274.662, 225.711 )
scale = Vector2( 0.103262, 0.109721 )
texture = ExtResource( 6 )

[node name="PurpleSpawn" type="Sprite" parent="."]
visible = false
position = Vector2( 382.348, 333.726 )
scale = Vector2( 0.103262, 0.109721 )
texture = ExtResource( 6 )

[node name="RedSpawn" type="Sprite" parent="."]
visible = false
position = Vector2( 490.363, 224.727 )
scale = Vector2( 0.103262, 0.109721 )
texture = ExtResource( 6 )

[node name="GreenSpawn" type="Sprite" parent="."]
visible = false
position = Vector2( 382.348, 117.368 )
scale = Vector2( 0.103262, 0.109721 )
texture = ExtResource( 6 )
[connection signal="timeout" from="VotingTimer" to="." method="_on_VotingTimer_timeout"]
